fixed some layout issues on the main study page

--- a/src/widgets/rightpanel/RightPanel.css
+++ b/src/widgets/rightpanel/RightPanel.css
@@ -1,5 +1,5 @@
 .rightpanel {
-	width: 30em;
+	/* width: 30em; */
 	height: 800px;
 	border-radius: 0.5em;
 	background-color: #e5e6dc;
